# BankoSpace

./: .firebaserc  .gitignore  BUILD_INSTRUCTIONS.md  BankoSpace_2.0.4_aarch64.dmg  BankoSpace_2.0.5_aarch64.dmg  FIREBASE_SETUP.md  FIREBASE_SETUP_BASIT.md  README.md  index.html  kana.html  package-lock.json  package.json  temp_ref_old.jsx  timer.html  vite.config.js
.github/workflows/: build-windows.yml  release.yml
public/fonts/: inter.css
src/: App.css  App.jsx  KanaApp.jsx  TimerApp.jsx  kana-main.jsx  main.jsx  supabase.js  timer-main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Calendar.css  Calendar.jsx  CategoryColumn.css  CategoryColumn.jsx  DailyChecklist.css  DailyChecklist.jsx  DateGroup.jsx  FitnessTracker.css  FitnessTracker.jsx  FlashCards.css  FlashCards.jsx  IncomeTracker.css  IncomeTracker.jsx  JapaneseKana.css  JapaneseKana.jsx  Login.css  Login.jsx  MarketResearch.css  MarketResearch.jsx  Notes.css  Notes.jsx  Planner.css  Planner.jsx  Portfolio.css  Portfolio.jsx  ProjectBid.css  ProjectBid.jsx  QuickNote.css  QuickNote.jsx  RefBoard.css  RefBoard.jsx  ReferencePanel.jsx  Roadmap.css  Roadmap.jsx  SilkroadCalc.css  SilkroadCalc.jsx  StockChart.jsx  StockChat.css  StockChat.jsx  StockMiniChart.jsx  (+16 more)
src/services/: firebaseSync.js  storageService.js
src/utils/: sounds.js
