[package]
name = "todo-app"
version = "2.2.6"
description = "A Tauri Todo Application"
authors = ["berkbankoglu"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["unstable"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-notification = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
urlencoding = "2.1"
url = "2"
tauri-plugin-shell = "2.0"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
